styled scrollbar & fixed header container css

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -16,6 +16,7 @@ body {
     background-color: $main-color;
     max-width: $max-screen-width;
     margin: auto;
+    overflow: hidden;
 }
 
 p {
