--- a/frontend/src/styles/main/_main.scss
+++ b/frontend/src/styles/main/_main.scss
@@ -17,7 +17,7 @@ header {
         height: auto;
     }
     .container {
-        width: calc($max-screen-width - 80px);
+        width: min(calc($max-screen-width - 80px), 100% - 40px);
         margin: auto;
         display: flex;
         align-items: center;
@@ -55,5 +55,24 @@ footer {
     img {
         width: 50%;
         height: auto;
+    }
+}
+
+#scroll-container {
+    // 100vh - header height - footer height
+    max-height: calc(100vh - 60px - 67px);
+    overflow: auto;
+    transform: translate(0, 60px);
+
+    &::-webkit-scrollbar {
+        width: 7px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: #abf08d10;
+        border-radius: 2px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #abf08d;
+        border-radius: 2px;
     }
 }
