--- a/frontend/src/styles/posts/_posts.scss
+++ b/frontend/src/styles/posts/_posts.scss
@@ -1,5 +1,5 @@
 .posts { 
-    padding: 17% 20px 9px 20px;
+    padding: 10px 20px 9px 20px;
 }
 
 .card {
